buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        mavenCentral()
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}




plugins {
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '5.1.+'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'

}

group = 'com.denfop'
version = minecraftRelease + '-' + modVersion

java {
    archivesBaseName = 'industrialupgrade'
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

minecraft {

    mappings channel: 'parchment', version: '2022.10.16-1.19.2'
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')


    runs {
        client {
            workingDirectory project.file('run')
            arg "-mixin.config=industrialupgrade.mixins.json"
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                industrialupgrade {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            arg "-mixin.config=industrialupgrade.mixins.json"
            property 'mixin.env.disableRefMap', 'true'
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                industrialupgrade {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
			workingDirectory project.file('run-data')
			arg "-mixin.config=industrialupgrade.mixins.json"
			 property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'
            args '--mod', archivesBaseName, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                industrialupgrade {
                    source sourceSets.main
                }
            }

        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {


    maven {
        name 'tterrag maven'
        url "https://maven.tterrag.com/"
    }
    maven {
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.k-4u.nl"
    }
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
     minecraft "net.minecraftforge:forge:${forgeVersion}"

    compileOnly(fg.deobf("mezz.jei:jei-${minecraftRelease}-common-api:${jeiVersion}"))
    compileOnly(fg.deobf("mezz.jei:jei-${minecraftRelease}-forge-api:${jeiVersion}"))
    runtimeOnly(fg.deobf("mezz.jei:jei-${minecraftRelease}-forge:${jeiVersion}"))

    implementation fg.deobf("curse.maven:the-one-probe-245211:3965693")
    implementation fg.deobf("curse.maven:pipez-443900:3920730")


    implementation fg.deobf("curse.maven:allthecompressed-514045:4068231")
    implementation fg.deobf("curse.maven:ato-405593:4046926")
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    compileOnly fg.deobf(files('lib/quantumgenerators-1.1-dev.jar'))
    compileOnly (files('lib/simplyquarries-1.1-dev.jar'))
    compileOnly (files('lib/powerutils-1.1-dev.jar'))

    runtimeOnly fg.deobf("curse.maven:jade-324717:4914105")
    compileOnly fg.deobf("curse.maven:jade-324717:4914105")

    runtimeOnly fg.deobf("curse.maven:jade-addons-583345:4850581")
    compileOnly fg.deobf("curse.maven:jade-addons-583345:4850581")
    runtimeOnly fg.deobf("curse.maven:thermal-expansion-69163:4782929")
    compileOnly fg.deobf("curse.maven:thermal-expansion-69163:4782929")
    runtimeOnly fg.deobf("curse.maven:thermal-foundation-222880:4782926")
    compileOnly fg.deobf("curse.maven:thermal-foundation-222880:4782926")
    runtimeOnly fg.deobf("curse.maven:thermal-dynamics-227443:4760633")
    compileOnly fg.deobf("curse.maven:thermal-dynamics-227443:4760633")
    compileOnly fg.deobf("curse.maven:ic2-classic-242942:4879119")
    runtimeOnly fg.deobf("curse.maven:cofh-core-69162:4759876")
    compileOnly fg.deobf("curse.maven:cofh-core-69162:4759876")
    compileOnly fg.deobf("curse.maven:botania-225643:5608807")

    runtimeOnly fg.deobf("curse.maven:crafttweaker-239197:4886432")
    compileOnly fg.deobf("curse.maven:crafttweaker-239197:4886432")

    runtimeOnly fg.deobf("curse.maven:thermal-innovation-291737:4759913")
    compileOnly fg.deobf("curse.maven:thermal-innovation-291737:4759913")

}


jar {
    manifest {
        attributes([
                "Specification-Title"     : "industrialupgrade",
                "Specification-Vendor"    : "Denfop",
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "Denfop",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs": "industrialupgrade.mixins.json"
        ])
    }
}
apply plugin: 'org.spongepowered.mixin'
mixin {
    add sourceSets.main, "mixins.industrialupgrade.refmap.json"
}
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
jar.finalizedBy('reobfJar')
